[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Items/DoubledMuzzle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Item.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Shaders/Shine.shader" type="Shader" id=3]
[ext_resource path="res://Assets/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=4]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/shine_length = 0.1
shader_param/offset = 0.0
shader_param/strength = 1.35

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 14 )

[sub_resource type="Animation" id=3]
resource_name = "Shine"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 2.1, 2.1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Vibrate"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 0.9, 1, 1.8, 1.9, 2, 2.8, 2.9, 3, 3.8, 3.9, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1.2, 1.2, 1.2, 1 ), Color( 1.2, 1.2, 1.2, 1 ), Color( 2, 2, 2, 1 ), Color( 1.2, 1.2, 1.2, 1 ), Color( 1.2, 1.2, 1.2, 1 ), Color( 2, 2, 2, 1 ), Color( 1.2, 1.2, 1.2, 1 ), Color( 1.2, 1.2, 1.2, 1 ), Color( 2, 2, 2, 1 ), Color( 1.2, 1.2, 1.2, 1 ), Color( 1.2, 1.2, 1.2, 1 ), Color( 2, 2, 2, 1 ), Color( 1.2, 1.2, 1.2, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8, 0.9, 1, 1.8, 1.9, 2, 2.8, 2.9, 3, 3.8, 3.9, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[node name="Item" type="Area2D"]
z_index = 10
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Shine = SubResource( 3 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Vibrate = SubResource( 4 )

[node name="DescriptionPopup" type="Control" parent="."]
visible = false
margin_left = -36.0
margin_top = -62.0
margin_right = 36.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DescriptionPopup"]
margin_left = -252.0
margin_top = -7.0
margin_right = 326.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 5 )
text = "Machine Turretssasdfasfasf"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="DescriptionPopup"]
margin_left = -26.0
margin_top = 17.0
margin_right = 100.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 6 )
text = "a"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceLabel" type="Label" parent="."]
visible = false
margin_left = -46.0
margin_top = 14.0
margin_right = 46.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 7 )
text = "100"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="TimeoutTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Item_body_entered"]
[connection signal="timeout" from="TimeoutTimer" to="." method="_on_Timer_timeout"]
